add viewport setting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1, maximum-scale=1">
   <meta name="description" content="Links and information about Kyohei Nakano / 中野恭兵" />
   <meta name="keywords" content="Kyohei Nakano,bonar" />
   <meta property="og:title" content="Mario Kart TV" />
@@ -14,6 +15,7 @@
 <style>
 body {
   padding: 20px;
+  font-size: 13pt;
 }
 .header {
   width: 100%;
@@ -37,7 +39,10 @@ body {
   width: 400px;
 }
 .pane-product {
-  width: 400px;
+  width: 500px;
+}
+.panel-body {
+  font-size: 0.8em;
 }
 
 h1 {
@@ -59,7 +64,8 @@ ul {
       <h1>Profile</h1>
       <ul>
         <li>Kyohei Nakano / 中野 恭兵</li>
-        <li>Software Engineer, Co-Founder at <a href="http://atmoph.com/">Atmoph</a></li>
+        <li>Software Engineer</li>
+        <li>Co-Founder at <a href="http://atmoph.com/">Atmoph</a></li>
         <li><a href="http://atmoph.com/en/about_us.html">More detailed information</a></li>
       </ul>
       
@@ -89,7 +95,7 @@ ul {
           <h3 class="panel-title"><a target="itunes" href="https://itunes.apple.com/us/app/sliderpace/id937845433?mt=8&uo=4">SliderPace</a></h3>
         </div>
         <div class="panel-body"><span class="multibyte">
-          ランナー用のペース計算機です。スライダーを使って、距離/ペース/時間を変換します。</span><br/><br/>Using the SliderPace, you can easily accomplish them with one finger. You first select the distance and move the slider. Doing so in turn changes the pace and time. </div>
+          ランナー用のペース計算機です。スライダーを使って、距離/ペース/時間を変換します。</span> / Using the SliderPace, you can easily accomplish them with one finger. You first select the distance and move the slider. Doing so in turn changes the pace and time. </div>
       </div>
 
 
