add food elite app link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
   width: 500px;
 }
 .panel-body {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 h1 {
@@ -89,6 +89,15 @@ ul {
 
     <div class="pane-product">
       <h1>Software</h1>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><a class="multibyte" target="app" href="http://bonar.github.io/food-elite/#/">1日の栄養素</a></h3>
+        </div>
+        <div class="panel-body">
+          <span class="multibyte"><a target="mhlw" href="http://www.mhlw.go.jp/bunya/kenkou/syokuji_kijyun.html">日本人の食事摂取基準</a>を元に、自分の年齢や活動レベルにあった1日分の栄養素の量を一覧できるサイト。</span>
+        </div>
+      </div>
 
       <div class="panel panel-default">
         <div class="panel-heading">
